--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,6 +31,8 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
+        env:
+          ENVIRONMENT: ${{ vars.ENVIRONMENT }}  # or ${{ secrets.ENVIRONMENT }}
         run: |
           echo Add other actions to build,
           echo "test, and deploy your project $ENVIRONMENT."
