--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,4 +35,4 @@ jobs:
   #         echo Add other actions to build,
   #         echo test, and deploy your project.
   build:
-    uses: ./.github/workflows/reusable/build.yml
+    uses: ./reusable/build.yml
